<resources>
    <string name="app_name">My awesome chat</string>
    <string name="app_login">Login chat</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="password">Password</string>
    <string name="action_sign_in_ime">Loguear</string>
    <string name="login">Ingresar</string>
    <string name="register">Registrar</string>
    <string name="appTittle">Ichat</string>
    <string name="register_user_successful">¡Se registro correctamente a el usuario!</string>
    <string name="error_mail">Escribe tu mail correctamente</string>
    <string name="error_mail_not_valid">Correo no válido</string>
    <string name="error_password_not_valid">Password no válido</string>
    <string name="init_session">Iniciando sesión...</string>
    <string name="error_connection">¡Ups! Tienes un problema de conexión...</string>
    <string name="error_signin">¡Ups! No hemos podido iniciar tu sesion</string>
    <string name="error_signup">¡Ups! No hemos podido crear este usuario</string>

    <string name="status_online">online</string>
    <string name="status_offline">offline</string>
    <string name="email">E-mail</string>
    <string name="img">img</string>
    <string name="title_home">My home</string>
    <string name="empty_recycler">¡Ups! Aun no tienes contactos\n <b>¡Empieza a agregar! </b></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint_dialog_add">Registra un correo!</string>

    <string name="add_mesagge_tittle">Agregar contacto</string>
    <string name="add_accept">Aceptar</string>
    <string name="add_cancel">Cancelar</string>
    <string name="add_success_contactadded">Contacto agregado exitosamente</string>
    <string name="add_error_contact">Imposiblre agregar usuario no existente</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
