<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login">

    <TextView
        android:id="@+id/textTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appTittle"
        android:gravity="center"
        android:textSize="50sp"
        android:textColor="@android:color/white"
        android:layout_marginBottom="40dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/white">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tv_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:theme="@style/LoginInputText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/white">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_ime"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:theme="@style/LoginInputText" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">


        <Button
            android:id="@+id/btn_login"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/login"
            android:theme="@style/AppTheme.AccentButton"
            tools:ignore="ButtonStyle,HardcodedText" />


        <Button
            android:id="@+id/btn_register"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_login"
            android:layout_alignBottom="@+id/btn_login"
            android:layout_toEndOf="@+id/btn_login"
            android:layout_toRightOf="@+id/btn_login"
            android:padding="3dp"
            android:text="@string/register"
            android:theme="@style/AppTheme.AccentButton"
            tools:ignore="ButtonStyle,HardcodedText" />
    </RelativeLayout>
</LinearLayout>