<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="6dp"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    app:cardCornerRadius="3dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/contactImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:layout_editor_absoluteY="16dp"
            tools:layout_editor_absoluteX="22dp"
            android:contentDescription="@string/img" />

        <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="25dp"
            android:textStyle="bold"
            android:id="@+id/contactEmail"
            tools:layout_editor_absoluteX="130dp" />

        <TextView
            android:text="@string/status_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="40dp"
            android:id="@+id/contactStatus"
            app:layout_constraintLeft_toRightOf="@+id/contactImg"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>